# jedisocks

./: .travis.yml  CMakeLists.txt  Makefile  README.md  js-local  js-server  local.c  local.h  server.c  server.h  test.c  utils.h
src/: CMakeLists.txt  c_map.c  c_map.h  jconf.c  jconf.h  js0n.c  local.c  local.h  main.c  server.c  server.h  socks5.h  utils.c  utils.h
src/gzip-test/: main.c
src/jedisocks.xcodeproj/: project.pbxproj
src/jedisocks.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/jedisocks.xcodeproj/project.xcworkspace/xcshareddata/: jedisocks.xccheckout
src/jedisocks.xcodeproj/project.xcworkspace/xcuserdata/jedihy.xcuserdatad/: UserInterfaceState.xcuserstate
src/jedisocks.xcodeproj/xcuserdata/jedihy.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/jedisocks.xcodeproj/xcuserdata/jedihy.xcuserdatad/xcschemes/: js-local.xcscheme  js-server.xcscheme  xcschememanagement.plist
